crates/cinrs-core/tests/snapshots/codegen__generated_items_carry_the_lint_exemptions.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: attribute
---
#[allow(
    unknown_lints,
    clashing_extern_declarations,
    dead_code,
    improper_ctypes,
    improper_ctypes_definitions,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    overflowing_literals,
    static_mut_refs,
    suspicious_runtime_symbol_definitions,
    unpredictable_function_pointer_comparisons,
    unreachable_code,
    unreachable_patterns,
    unused_assignments,
    unused_braces,
    unused_comparisons,
    unused_labels,
    unused_mut,
    unused_parens,
    unused_unsafe,
    unused_variables,
    clippy::all
)]
