crates/cinrs-core/tests/snapshots/codegen__generic_selection_emits_only_the_chosen_arm.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: "generate_for(Standard::C11,\nr#\"\n        int as_int(double d) { return (int)d; }\n\n        int describe(int i, double d, char *s) {\n            return _Generic(i, int: 1, double: 2, char *: 3, default: 0)\n                 + _Generic(d, int: 1, double: as_int(d), default: 0)\n                 + _Generic(s, char *: (int)*s, default: 0);\n        }\n\n        struct Pair { int a; double b; };\n        double d;\n\n        unsigned long alignments(void) {\n            return _Alignof(double) + _Alignof(struct Pair) + _Alignof(d);\n        }\n        \"#)"
---
mod __cinrs_unit_16919680 {
    #![allow(…)]
    const _: () = { /* the data-model check */ };
    #[repr(C)]
    #[derive(Copy, Clone)]
    pub struct Pair {
        pub a: ::core::ffi::c_int,
        pub b: ::core::ffi::c_double,
    }
    pub static mut d: ::core::ffi::c_double = 0.0;
    pub unsafe extern "C" fn as_int(
        mut d_1: ::core::ffi::c_double,
    ) -> ::core::ffi::c_int {
        unsafe {
            return d_1 as ::core::ffi::c_int;
        }
    }
    pub unsafe extern "C" fn describe(
        mut i: ::core::ffi::c_int,
        mut d_1: ::core::ffi::c_double,
        mut s: *mut ::core::ffi::c_char,
    ) -> ::core::ffi::c_int {
        unsafe {
            return (1 as ::core::ffi::c_int)
                .wrapping_add(as_int(d_1))
                .wrapping_add((*s) as ::core::ffi::c_int);
        }
    }
    pub unsafe extern "C" fn alignments() -> ::core::ffi::c_ulong {
        unsafe {
            return (8 as ::core::ffi::c_ulong).wrapping_add(8).wrapping_add(8);
        }
    }
}
#[allow(unknown_lints, ambiguous_glob_reexports, unused_imports)]
pub use __cinrs_unit_16919680::*;
