crates/cinrs-core/tests/snapshots/codegen__goto_becomes_a_state_machine.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: "generate(r\"\n        int countdown(int n, int start_inside) {\n            int steps = 0;\n            if (start_inside) goto inside;\n            while (n > 0) {\n                n--;\n            inside:\n                steps++;\n            }\n            return steps * 10 + n;\n        }\n        \")"
---
mod __cinrs_unit_e25ccc91 {
    #![allow(…)]
    const _: () = { /* the data-model check */ };
    pub unsafe extern "C" fn countdown(
        mut n: ::core::ffi::c_int,
        mut start_inside: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int {
        unsafe {
            let mut steps: ::core::ffi::c_int = 0;
            let mut __cinrs_entry0: ::core::primitive::u32 = 0;
            steps = 0;
            if start_inside != 0 {
                __cinrs_entry0 = 1;
            } else {
                __cinrs_entry0 = 0;
            }
            'inside: loop {
                if __cinrs_entry0 == 0 {
                    if !(n > 0) {
                        break 'inside;
                    }
                    n = n.wrapping_sub(1);
                    __cinrs_entry0 = 1;
                } else {
                    steps = steps.wrapping_add(1);
                    __cinrs_entry0 = 0;
                }
            }
            return steps.wrapping_mul(10).wrapping_add(n);
        }
    }
}
#[allow(unknown_lints, ambiguous_glob_reexports, unused_imports)]
pub use __cinrs_unit_e25ccc91::*;
